--- a/webapp/exercise/resources/partials/subject.html
+++ b/webapp/exercise/resources/partials/subject.html
@@ -10,6 +10,10 @@
                     <span class="subject-title font-size-small">{{ subject.title }}</span>
                 </div>
             </div>
+			
+			<div class="btn btn-block btn-danger" style="position:absolute;bottom: 0; margin:10px;">
+				<a href="/signout" id="btn-signout" style="text-decoration:none; color:white; font-size:20px;width:100%;height:auto; display:block; text-align:center">登出</a>
+			</div>
         </nav>
 
         <div class="page-wrap" style="width:100%; left:{{ offsetWidth }}">
