修复关于主副卡的颜色

--- a/webapp/exercise/resources/css/lesson.css
+++ b/webapp/exercise/resources/css/lesson.css
@@ -56,8 +56,15 @@
     overflow: hidden;
 }
 
-.lesson-button-icon-unlocked {
+.lesson-button-icon-unlocked-false {
     background-color: #64b7e9;
+    height: 72px;
+    text-align: center;
+    overflow: hidden;
+}
+
+.lesson-button-icon-unlocked-true {
+    background-color: #7e6cdb;
     height: 72px;
     text-align: center;
     overflow: hidden;
