--- a/webapp/exercise/resources/partials/subject.html
+++ b/webapp/exercise/resources/partials/subject.html
@@ -11,8 +11,8 @@
                 </div>
             </div>
 			
-			<div class="btn btn-block btn-danger" style="position:absolute;bottom: 0; margin:10px;">
-				<a href="/signout" id="btn-signout" style="text-decoration:none; color:white; font-size:20px;width:100%;height:auto; display:block; text-align:center">登出</a>
+			<div class="btn btn-block btn-danger" style="position:absolute;bottom: 0;width: 90%;margin:5%">
+				<a href="/signout" id="btn-signout" style="text-decoration:none; color:white; font-size:20px;width:100%;height:auto; display:block; text-align:center;">登出</a>
 			</div>
         </nav>
 
