fix the color issue on ppicture choice of the question.

--- a/webapp/exercise/resources/css/activity.css
+++ b/webapp/exercise/resources/css/activity.css
@@ -123,7 +123,7 @@ ximage {
   max-width: 100%;
 }
 .choice-layout-card-state-wrong {
-  background-color: red;
+  background-color: #f4a5aa;
   color: white;
   width: 100%;
   height: 225px;
