fix signout redirect & lesson html description support

--- a/webapp/exercise/resources/partials/comb.html
+++ b/webapp/exercise/resources/partials/comb.html
@@ -15,7 +15,8 @@
                               <span class="lesson-title font-size-big">{{lesson.title}}</span>
                         </div>
                         <div class="lesson-body-enter">
-                              <span>{{lesson.summary}}</span>
+                              <!-- <span>{{lesson.summary}}</span> -->
+							  <div class="cao" ng-bind-html-unsafe="lesson.summary"></div>
                         </div>
                         <div class="lesson-footer modal-footer">
                               <button class="lesson-enter-button-locked col-md-4 col-md-offset-4">开始学习</button>
