add the left redius element

--- a/webapp/exercise/resources/css/lesson.css
+++ b/webapp/exercise/resources/css/lesson.css
@@ -67,6 +67,7 @@
 }
 
 .lesson-button-icon-unlocked-true {
+    border-radius: 6px 6px 0 0;
     background-color: #7e6cdb;
     height: 72px;
     text-align: center;
@@ -78,6 +79,7 @@
 }
 
 .lesson-button-icon-locked {
+    border-radius: 6px 6px 0 0;
     background-color: #cccccc;
     height: 72px;
     text-align: center;
