--- a/webapp/exercise/resources/css/main.css
+++ b/webapp/exercise/resources/css/main.css
@@ -1,8 +1,8 @@
 body {
   color: #555555;
   height: 100%;
-  font-size: 24px;
-  font-family: Helvetica, Tahoma, Arial, STXihei, “华文细黑”, “Microsoft YaHei”, “微软雅黑”, SimSun, “宋体”, sans-serif;  
+  font-size: 18px;
+  font-family: Helvetica, Tahoma, Arial, STXihei, “华文细黑”, Microsoft YaHei, 微软雅黑, SimSun, “宋体”, sans-serif;  
 }
 .font-size-big {
   /*font-size: 1.25em;*/
